--- a/froggy/index.html
+++ b/froggy/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/site.webmanifest">
+    <script type="text/javascript" src="Frog.js"></script>
     <title>Grumpy Froggy</title>
 </head>
 <body>
@@ -30,31 +31,7 @@
     </div>
 
     <script>
-        let clicks = 0;
-
-        function onClick() {
-    clicks++;
-    document.getElementById("clicks").innerHTML = clicks;
-
-    // Dynamically create a worm image
-    const wormImg = document.createElement('img');
-    wormImg.src = 'images/worm.png';
-    wormImg.alt = 'Worm';
-    wormImg.classList.add('worm'); // Apply fall animation class
-
-    // Set random horizontal position (0% to 100% of the screen width)
-    const randomLeft = Math.random() * 100; // Generates a value between 0 and 100
-    wormImg.style.left = `${randomLeft}%`; // Set the random left position
-
-    // Add the worm image to the container
-    document.getElementById('container').appendChild(wormImg);
-
-    // Remove the worm image after 2 seconds (animation duration)
-    setTimeout(() => {
-        wormImg.remove();
-    }, 2000);
-}
-
+    
     </script>
 </body>
 </html>
