--- a/froggy/index.html
+++ b/froggy/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container" id="container">
-        <h1 class="bokor-regular">Freddie the Frog says <br>Have a <b>good</b> day</h1>
+        <h1 class="bokor-regular">Freddie the Frog says: Have a <b>good</b> day</h1>
         <img alt="Grumpy rain frog, fat and round" class="froggo" src="images/frogg.png">
         <figcaption>This frog is not having a good day</figcaption>
 
@@ -26,7 +26,7 @@
         </span>
 
         <p>Cute and fat</p>
-        <h2>Check out this intimidating froggo <a href="https://www.youtube.com/watch?v=cBkWhkAZ9ds">war cry</a></h2>
+        <h2>Check out this intimidating froggo war cry</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/cBkWhkAZ9ds?si=U7xlmvYDb13ZK7By" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
